base do html feita e elaboracao do metodo delete

--- a/d401-coach/website/templates/listar_coachs.html
+++ b/d401-coach/website/templates/listar_coachs.html
@@ -12,6 +12,7 @@
         <p><strong>Nome do coach: </strong>{{item.nome}}</p>
         <p><strong>Motive-se:</strong> {{item.frase}}</p>
         <p><strong>Inspirado por: </strong>{{item.inspirador}}</p>
+        <p><a href="/coachs/delete/{{item.id}}">Deletar</a></p>
         <hr>
     {% endfor %}
 
