--- a/d401-coach/website/templates/index.html
+++ b/d401-coach/website/templates/index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Frases Coach</h1>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block content %}
+    <h1 class="titulo-indez">Frases Coach</h1>
     <p>Cadastre sua frase coach</p>
-    {{msg}}
+    <p><a href="coachs/listar">aaaaaaaaaaaaaaa</a></p>
+    <p>{{msg}}</p>
     <form action="/" method="POST">
         {% csrf_token %}
         <label for="">Nome: </label>
         <input name="nome" type="text">
         
         <label for="">Frase Inspiradora: </label>
-        <textarea name="frase" id="" cols="30" rows="10"></textarea>
+        <input name="frase" id="" cols="30" rows="10"></input>
         
         <label for="">A pessoa que te motivou</label>
         <input name="inspirador" type="text">
 
         <input type="submit" value="Enviar">
+
+        <img src="{% static 'imagens/coach.jpg' %}" alt="">
+
     </form>
-</body>
-</html>
+{% endblock %}
