--- a/d401-coach/website/templates/listar_coachs.html
+++ b/d401-coach/website/templates/listar_coachs.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block content %}
+    <p><strong>{{msg}}</strong></p>
     <marquee><h1>Listar de suas frases perfeitas</h1></marquee>
     {% for item in lista %}
         <p><strong>Nome do coach: </strong>{{item.nome}}</p>
@@ -16,5 +11,4 @@
         <hr>
     {% endfor %}
 
-</body>
-</html>
+{% endblock %}
